@@ -41,7 +41,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <kiji-schema.version>1.3.2</kiji-schema.version>
     <kiji-scoring.version>0.7.0</kiji-scoring.version>
-    <kiji-mapreduce.version>1.0.0</kiji-mapreduce.version>
+    <kiji-mapreduce.version>1.2.1</kiji-mapreduce.version>
     <fake-hbase.version>0.1.2</fake-hbase.version>
     <guava.version>14.0.1</guava.version>
     <dropwizard.version>0.6.2</dropwizard.version>
